2007-12-30  Stefan Jahn  <stefan@lkcc.org>

	* parasweep.cpp: Allow parameter sweeps to display their own
	prgress bar.  Lower order sweeps and other simulations' progress
	bar get disabled.

2007-12-28  Stefan Jahn  <stefan@lkcc.org>

	* ucs.cpp (main): Evaluating error codes from analyses.  Changed
	solve() callback for each analysis to be able to return an error
	code.

	* trsolver.cpp: Avoiding "jacobian singular at t = nan" error
	message.

2007-12-11  Stefan Jahn  <stefan@lkcc.org>

	* hash.h (class hashentry): Fixed compile error for "gcc version
	4.1.1 on fedora 7 linux".

2007-11-02  Stefan Jahn  <stefan@lkcc.org>

	* vector.cpp: Added optional third argument to unwrap() specifying
	the phase/angle step.

2007-11-01  Stefan Jahn  <stefan@lkcc.org>

	* applications.h: Added StabFactor() as alias for Rollet().

	* matrix.cpp (b1), matvec.cpp (b1): Added new function calculating
	the stability measure B1 of a 2-port S-parameter matrix.

2007-10-22  Stefan Jahn  <stefan@lkcc.org>

	* parse_netlist.y: First preparation to allow vector properties to
	be a reference to equation variables.

2007-10-21  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Fixed 'out of bounds' return value in order to
	avoid segmentation fault.

2007-10-19  Stefan Jahn  <stefan@lkcc.org>

	* environment.cpp: Added 'passing' attribute to variables in the
	environment.  Thus computed values in an environment don't get
	passed from the environment variables, but any others will be
	passed as ususal (e.g. subcircuit parameters).

2007-10-02  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Added the ?: operator for matrices as well as
	vectors.
	Implemented dB() function for matrices and matrix vectors.

2007-09-27  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Fixed if-then-else evaluation for mixed
	real/complex arguments as well as for pure complex arguments.

2007-09-25  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp: Fixed toString() function for evaluated matrices.