@@ -150,13 +150,13 @@
 #define PACKAGE_NAME "qucs-core"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "qucs-core 0.0.13"
+#define PACKAGE_STRING "qucs-core 0.0.14"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "qucs-core"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "0.0.13"
+#define PACKAGE_VERSION "0.0.14"
 
 /* The size of a `long double', as computed by sizeof. */
 /* #undef SIZEOF_LONG_DOUBLE */
